--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -814,7 +814,7 @@ For details, see section \ref{r:section_bugfixes}.
 
 The V1 version of cargo-semver-checks-action was created when
 cargo-semver-checks lacked a built-in logic of choosing the correct baseline version and was not
-generating the rustdoc output automatically. Both of these tasks where therefore handled by the action.
+generating the rustdoc output automatically. Both of these tasks were therefore handled by the action.
 When our work on the project started, the tool had already gained these features making the
 action obsolete. Its only advantage over the manual configuration was that it
 installed both the Rust toolchain and the tool itself. However, it downloaded the baseline version from
@@ -830,7 +830,7 @@ be run using Node.js and implement the V2 version in TypeScript. It is a standar
 of creating complex actions, as it has multiple advantages:
 \begin{itemize}
 	\item TypeScript action is platform-independent and can be run on all runners supported by GitHub Actions.
-	\item Using Node.js makes it possible to depend on variety of \texttt{npm} packages, in particular the GitHub Actions
+	\item Using Node.js makes it possible to depend on a variety of \texttt{npm} packages, in particular the GitHub Actions
 		Toolkit \cite{github_actions_toolkit}, instead of building the components from scratch.
 	\item TypeScript code is more readable and easier to organize than a bash script or a GitHub workflow file.
 \end{itemize}
@@ -1419,6 +1419,16 @@ TODO:
 	\textit{Rust -- Issue \#110815} (2023) \\
 	\url{https://github.com/rust-lang/rust/issues/110815}
 
+
+%%% section 5.3 links
+
+\bibitem{github_actions_toolkit} GitHub,
+	\textit{GitHub Actions Toolkit} (2023) \\
+	\url{https://github.com/actions/toolkit}
+
+\bibitem{crates_io_sparse_protocol} Inside Rust Blog,
+	\textit{Help test Cargo's new index protocol} (2023) \\
+	\url{https://blog.rust-lang.org/inside-rust/2023/01/30/cargo-sparse-protocol.html}
 
 %%% section 5.3 links
 
