--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1608,7 +1608,7 @@ cargo-semver-checks has proven its versatility in the vast, diverse world of sem
 % 	\item over 22 900 downloads before we started contributing to the project (period of 5 months),
 % 	\item over 32 700 downloads during our contributions, before the release of pre-built executable
 % 		binaries (period of 3 months),
-% 	\item over 7 400 downloads during our contributions, after the release of pre-built executable
+% 	\item over 7400 downloads during our contributions, after the release of pre-built executable
 % 		binaries (period of 3 months).
 % \end{itemize}
 % \begin{figure}[h]
