--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1487,9 +1487,9 @@ and immediate contact with him through chat).
 
 	\item Tomasz and Michał:
 		\begin{itemize}
-			\item Added a new lint (trustfall query, test crates, tests) to detect field removals
+			\item Added a new lint (Trustfall query, test crates, tests) to detect field removals
 				from a struct variant in enums and added a field in the adapter for the lint.
-			\item Added a new lint (trustfall query, test crates, tests) to detect when function
+			\item Added a new lint (Trustfall query, test crates, tests) to detect when function
 				and method parameter count changes and added the retrieval of function parameter
 				names in the adapter.
 			\item Fixed a bug where the rustdoc of the current and the baseline crates
@@ -1546,7 +1546,7 @@ and immediate contact with him through chat).
 			% No meeting was complete without his touch, \\
 			% A true master of the notetaking clutch. \\
 
-			\item Added several new lints (trustfall queries, test crates, tests) to detect
+			\item Added several new lints (Trustfall queries, test crates, tests) to detect
 				when different items have been marked with the \texttt{must\_use} attribute.
 				Writing separate lints for individual items allowed to provide more detailed
 				messages for the user, improved the code structure by creating smaller,
@@ -1565,7 +1565,7 @@ and immediate contact with him through chat).
 
 	\item Mieszko and Bartosz:
 		\begin{itemize}
-			\item Added a new lint (trustfall query, test crates, tests) to detect when
+			\item Added a new lint (Trustfall query, test crates, tests) to detect when
 				an exhaustive public enum has the \texttt{non\_exhaustive} attribute added.
 			\item Designed and implemented a new adapter schema for handling attributes.
 				Updated all lints that check attributes to use the new schema, as well as added
